@@ -1,3 +1,11 @@
+2010-10-03  Ulrich Drepper  <drepper@gmail.com>
+
+	[BZ #12077]
+	* sysdeps/x86_64/strcmp.S: Fix handling of remaining bytes in buffer
+	for strncmp and strncasecmp.
+	* string/stratcliff.c: Add tests for strcmp and strncmp.
+	* wcsmbs/wcsatcliff.c: Adjust for stratcliff change.
+
 2010-09-28  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>
 
 	* sysdeps/sh/sh4/fpu/fpu_control.h: Add 'extern "C"' protection to
